# 2safe-dolphin

./: AUTHORS  CHANGES.txt  CMakeLists.txt  HowToInstall.doc  INSTALL  LICENSE  README.md  TODO  dolphin-dropbox-plugin.desktop  prepare-deb-build.sh
QJson/: CMakeLists.txt  Makefile.Debug  Makefile.Release
debian/: changelog  control  copyright  rules
doc/: dropbox-commands  dropboxd-protocol
i18n/: CMakeLists.txt  extract-messages.sh  ru.po
src/: dolphin-dropbox-plugin.cpp  dolphin-dropbox-plugin.h
